--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -1,11 +1,21 @@
 .whiteText,
 .redText {
-  font-size: 100px;
+  font-size: 80px;
   font-weight: 200;
+  max-width: max-content;
 }
 
 .circularText {
   font-weight: 400;
   text-align: center;
   font-size: 1.2rem;
+}
+@media (max-width: 450px) {
+  .circularComponent {
+    flex-direction: column;
+  }
+  .whiteText,
+  .redText {
+    font-size: 50px;
+  }
 }
