--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -4,15 +4,15 @@
 
 :root {
   --foreground-rgb: 255, 255, 255;
-  --background-start-rgb: 0, 0, 0;
-  --background-end-rgb: 0, 0, 0;
+  --background-start-rgb: 25,25,25;
+  --background-end-rgb: 25,25,25;
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
     --foreground-rgb: 255, 255, 255;
-    --background-start-rgb: 0, 0, 0;
-    --background-end-rgb: 0, 0, 0;
+    --background-start-rgb: 25,25,25;
+    --background-end-rgb: 25,25,25;
   }
 }
 
