--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -19,3 +19,10 @@
     font-size: 50px;
   }
 }
+
+.menuItem {
+  background-color: rgba(235, 51, 51, 0.883);
+  text-align: center;
+  padding: 10px;
+  border-radius: 5px 5px 20px 20px;
+}
