--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -32,3 +32,39 @@ body {
     rgb(var(--background-start-rgb));
 }
 
+.demo-container {
+  width: 30vw;
+  margin-top: 100px;
+  position: relative;
+  bottom:10vh;
+}
+
+.progress-bar {
+  height: 20px;
+  background-color: rgba(80, 80, 80, 0.2);
+  width: 100%;
+  overflow: hidden;
+  position: relative;
+  bottom:10vw;
+  border-radius: 40px;
+}
+
+.progress-bar-value {
+  width: 100%;
+  height: 100%;
+  background-color: rgba(124, 0, 0, 0.593);
+  animation: indeterminateAnimation 1s infinite;
+  transform-origin: 0% 50%;
+}
+
+@keyframes indeterminateAnimation {
+  0% {
+    transform:  translateX(0) scaleX(0);
+  }
+  40% {
+    transform:  translateX(0) scaleX(0.4);
+  }
+  100% {
+    transform:  translateX(100%) scaleX(0.5);
+  }
+}
