--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -74,16 +74,17 @@ body {
   display: flex;
   gap: 4vmin;
   left: 50%;
-  /* right: 50%; */
   top: 50%;
-  transform: translate(0%, -50%);
+  transform: translate(0%, -50%); 
   user-select: none;
   margin-top: 12rem;
   margin-bottom: -12rem;
-  height: 60vh; /* Set a fixed height */
-  width: 100%; 
-  overflow-x: auto; /* Enable horizontal scrolling */
   overflow-y: scroll;
+  
+}
+
+.image-track::-webkit-scrollbar {
+  display: none; /* Hide the scrollbar */
 }
 
 .image-track .image {
@@ -92,4 +93,6 @@ body {
   object-fit: cover;
   object-position: 100% center;
 }
+
+
 
