--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -25,3 +25,9 @@
   padding: 10px;
   border-radius: 5px 5px 20px 20px;
 }
+
+@media screen and (max-width: 768px) {
+  .cs {
+      font-size: 3.4rem;
+  }
+}
