--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -50,8 +50,10 @@
     font-size: 3.4rem;
   }
   .card {
-    position: relative;
-    translate: 20%;
+    position: absolute;
+    /* translate: -50%; */
+    transform:translateX(-50%) translateY(50%);
+    left: 50vw;
     padding:0 40px;
   }
 }
