Added line break

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -55,6 +55,9 @@ body {
   animation: indeterminateAnimation 1s infinite;
   transform-origin: 0% 50%;
 }
+p{
+  white-space: pre-wrap;
+}
 
 @keyframes indeterminateAnimation {
   0% {
