--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -55,6 +55,17 @@
     transform: translateX(-50%) translateY(50%);
     left: 50vw;
     padding: 0 40px;
+    width:500px;
+  }
+}
+@media screen and (max-width: 500px) {
+  .text{
+    font-size: 0.7rem;
+    line-height:1rem;
+  }
+  .card {
+  
+    width:290px;
   }
 }
 
