added button to view image and link submissions and styled components

--- a/src/components/AdminPage/TaskList.module.css
+++ b/src/components/AdminPage/TaskList.module.css
@@ -23,6 +23,34 @@
   cursor: pointer;
   margin: 10px;
 }
+
+.button:hover,
+.link:hover {
+  background-color: rgb(68, 20, 20);
+}
 .button:disabled {
   background-color: rgb(124, 124, 124);
+}
+
+.link,
+.disabledlink {
+  text-decoration: none;
+  display: block;
+  color: white;
+  padding: 5px;
+  margin-bottom: 2px;
+  background-color: rgb(89, 23, 16);
+  border-radius: 8px;
+}
+
+.disabledlink {
+  background-color: rgb(124, 124, 124);
+  cursor: not-allowed;
+}
+
+.header {
+  color: white;
+  padding: 10px;
+  margin-top: 20px;
+  border: 1px solid white;
 }
